--- a/Lab1_202001130/202001130.md
+++ b/Lab1_202001130/202001130.md
@@ -12,7 +12,7 @@ Task: Identifying Functional and Non-Functional Requirements
 
 3. The system should enable users to view every book that is accessible in the library.
  
-5. Members will be able to easily borrow and return books while seated at their workstation or table.
+5. Members will be able to easily borrow and return books while seated at their convenient place.
 
 7. If there are no other reservations in line, the system should allow them to extend the book's loan period.
 
@@ -42,7 +42,7 @@ Task: Identifying Functional and Non-Functional Requirements
 
 6. Scalability: Application should be scalable enough to accommodate many users at once. The application's database should be big enough to hold all of the members' information and book-specific information.
 
-5. Security : Security: Passwords or other sensitive information have to be saved at the backend in star characters (i.e. in the database).
+5. Security: Passwords or other sensitive information have to be saved at the backend in star characters (i.e. in the database).
 
 7. Maintainability : It is simple to update and maintain the website.
 
@@ -60,7 +60,9 @@ For those who have hearing problems, we are developing an Android app. To distin
 
 2. Recognition of key sound events of interest such as car horns and babies.
 
-3. Displays notifications to users following sound detection.
+3. Our Application should be user friendly. 
+
+5. Displays notifications to users following sound detection.
 
 4. Because it is a mobile application, any OS may utilise it.
 
